--- a/docs/Build-&-Run.adoc
+++ b/docs/Build-&-Run.adoc
@@ -11,17 +11,19 @@ Use a recent version of `npm` and `node` to build NeoDash. The
 application has been tested with npm 8.6 & node v17.4.0.
 ____
 
-To run the application in development mode: - clone this repository. -
-open a terminal and navigate to the directory you just cloned. - execute
-`npm install` to install the necessary dependencies. - execute
-`npm run dev` to run the app in development mode. - the application
-should be available at http://localhost:3000.
+To run the application in development mode: 
 
-To build the app for production: - follow the steps above to clone the
-repository and install dependencies. - execute `npm run build`. This
-will create a `build` folder in your project directory. - deploy the
-contents of the build folder to a web server. You should then be able to
-run the web app.
+- clone this repository. 
+- open a terminal and navigate to the directory you just cloned. 
+- execute `npm install` to install the necessary dependencies. 
+- execute `npm run dev` to run the app in development mode. 
+- the application should be available at http://localhost:3000.
+
+To build the app for production: 
+
+- follow the steps above to clone the repository and install dependencies. 
+- execute `npm run build`. This will create a `build` folder in your project directory. 
+- deploy the contents of the build folder to a web server. You should then be able to run the web app.
 
 == Run locally with Docker
 
@@ -61,5 +63,7 @@ If you use Windows, you might need to prefix the command with `winpty`:
 winpty docker build . -t neodash
 ....
 
-After building, you can run the image with: ``` docker run -it –rm -p
-5005:5005 neodash
+After building, you can run the image with:
+....
+docker run -it –rm -p 5005:5005 neodash
+.... 
