--- a/docs/Circle-Packing.adoc
+++ b/docs/Circle-Packing.adoc
@@ -1,8 +1,8 @@
 A circle packing chart will render hierarchical data in a group of
-nested circles. It takes two fields: - *Path*: a list of strings. This
-represents the hierarchy (from highest to lowest level). - *Value*: a
-number that matches the size of the element at the lowest level. Sizes
-of non-leaf levels are determined from the sum of their children.
+nested circles. It takes two fields: 
+
+- *Path*: a list of strings. This represents the hierarchy (from highest to lowest level).
+ - *Value*: a number that matches the size of the element at the lowest level. Sizes of non-leaf levels are determined from the sum of their children.
 
 == Examples
 
