--- a/docs/Developer Guide.adoc
+++ b/docs/Developer Guide.adoc
@@ -2,26 +2,38 @@ The following pages will guide developers who want to dive deeper into
 NeoDash, and extend it for their own needs. In case you just want to run
 NeoDash, see the Quickstart page.
 
-This guide has the following sections: - link:Build%20&%20Run[Build &
-Run] - Configuration - link:Standalone%20Mode[Standalone Mode] -
-link:Component%20Overview[Component Overview] - Design -
-link:Adding%20Visualizations[Adding Visualizations] -
-link:State%20Management[State Management] - Testing - Contributing
+This guide has the following sections: 
+
+- link:Build%20&%20Run[Build & Run] 
+- link:Configuration[Configuration]
+- link:Standalone%20Mode[Standalone Mode] 
+- link:Component%20Overview[Component Overview] 
+- link:Design[Design] 
+- link:Adding%20Visualizations[Adding Visualizations] 
+- link:State%20Management[State Management] 
+- link:Testing[Testing]
+- link:Contributing[Contributing]
 
 == Prerequisites
 
 NeoDash is a web application written in TypeScript. Knowledge of React &
 Redux is also highly recommended when extending the application.
 Concretely, the following languages and frameworks make up the core of
-NeoDash: - https://reactjs.org/[React] - https://redux.js.org/[Redux] -
-https://redux.js.org/usage/writing-logic-thunks[Redux Thunks] -
-https://www.cypress.io/[Cypress] - https://mui.com/[Material UI] -
-https://webpack.js.org/[Webpack]
+NeoDash: 
 
-The following libraries are used to build the visualizations for
-reports: -
-https://github.com/vasturiano/react-force-graph[react-force-graph
-(Graph)] - https://mui.com/components/data-grid/[@mui/datagrid (Table)]
-- https://nivo.rocks/[@nivo (Bar, Line, Pie charts)] -
-https://leafletjs.com/[leaflet (Map)] -
-https://github.com/remarkjs/react-markdown[react-markdown (Markdown)]
+- https://reactjs.org/[React] 
+- https://redux.js.org/[Redux] 
+- https://redux.js.org/usage/writing-logic-thunks[Redux Thunks] 
+- https://www.cypress.io/[Cypress] 
+- https://mui.com/[Material UI] 
+- https://webpack.js.org/[Webpack]
+
+The following core libraries are used to build the visualizations for
+reports: 
+
+- https://github.com/vasturiano/react-force-graph[react-force-graph
+(Graph)] 
+- https://mui.com/components/data-grid/[@mui/datagrid (Table)]
+- https://nivo.rocks/[@nivo (Bar, Line, Pie charts)] 
+- https://leafletjs.com/[leaflet (Map)] 
+- https://github.com/remarkjs/react-markdown[react-markdown (Markdown)]
