--- a/docs/FAQ.adoc
+++ b/docs/FAQ.adoc
@@ -1,24 +1,22 @@
 == 1. How can I learn more about NeoDash?
 
 To learn more, check out the following list of resources (blogs, videos
-and sites): - https://www.youtube.com/watch?v=Ygzj0Y4cYm4[NeoDash 2.0 in
-Five Minutes] - https://www.youtube.com/watch?v=vjZ9M7JpExA[NeoDash 2.0
-- Hands On at Neo4j Live] -
-https://medium.com/p/ddc938ff82fa[Investigating Supply Chains with
-NeoDash] -
-https://thatdavestevens.medium.com/social-recommendations-slack-neo4j-and-neodash-fe916588e65b[Social
-Recommendations with Neo4j & NeoDash] -
-https://neo4j.com/developer-blog/bitcoin-transactions-dashboard-neo4j-neodash/[Real-Time
-Dashboard of Bitcoin Transactions With Neo4j and NeoDash]
--https://medium.com/@a.emrevarol/european-natural-gas-network-via-knowledge-graph-3c3decb5f2ec[European
-Natural Gas Pipelines] -
-http://blog.bruggen.com/2020/11/exporting-spotify-playlists-into-neo4j.html[Exporting
-Spotify Playlists into Neo4j] -
-https://nielsdejong.nl/neo4j%20projects/2021/12/14/neodash-2.0-a-brand-new-way-of-visualizing-neo4j-data.html[NeoDash
-2.0 Release Overview] -
-https://nielsdejong.nl/neo4j%20projects/2021/06/06/neodash-1.1-extensible-interactive-dashboards.html[NeoDash
-1.1 Release Overview] -
-https://nielsdejong.nl/neo4j%20projects/2020/11/16/neodash[NeoDash 1.0
+and sites): 
+
+- https://www.youtube.com/watch?v=Ygzj0Y4cYm4[NeoDash 2.0 in
+Five Minutes] 
+- https://www.youtube.com/watch?v=vjZ9M7JpExA[NeoDash 2.0 - Hands On at Neo4j Live] 
+- https://medium.com/p/ddc938ff82fa[Investigating Supply Chains with NeoDash] 
+- https://thatdavestevens.medium.com/social-recommendations-slack-neo4j-and-neodash-fe916588e65b[Social Recommendations with Neo4j & NeoDash] 
+- https://neo4j.com/developer-blog/bitcoin-transactions-dashboard-neo4j-neodash/[Real-Time Dashboard of Bitcoin Transactions With Neo4j and NeoDash]
+- https://medium.com/@a.emrevarol/european-natural-gas-network-via-knowledge-graph-3c3decb5f2ec[European
+Natural Gas Pipelines] 
+- http://blog.bruggen.com/2020/11/exporting-spotify-playlists-into-neo4j.html[Exporting Spotify Playlists into Neo4j] 
+- https://nielsdejong.nl/neo4j%20projects/2021/12/14/neodash-2.0-a-brand-new-way-of-visualizing-neo4j-data.html[NeoDash
+2.0 Release Overview] 
+- https://nielsdejong.nl/neo4j%20projects/2021/06/06/neodash-1.1-extensible-interactive-dashboards.html[NeoDash
+1.1 Release Overview] 
+- https://nielsdejong.nl/neo4j%20projects/2020/11/16/neodash[NeoDash 1.0
 Release Overview]
 
 _Have a blog post about NeoDash you’d like to share? Let us know and we
@@ -48,10 +46,12 @@ mailto:niels.dejong@neo4j.com[team] and we can help out.
 == 4. Is NeoDash Production Ready?
 
 NeoDash is safe to be used in a production environment. As it is a
-reporting tool, keep the following things in mind: - Always use
-*read-only* Neo4j accounts when connecting to a dashboard. - Always
-deploy NeoDash on https, so that an encrypted Neo4j connection can be
-used. - As NeoDash accesses Neo4j directly, make sure you only give
+reporting tool, keep the following things in mind: 
+
+- Always use *read-only* Neo4j accounts when connecting to a dashboard. 
+- Always deploy NeoDash with SSL, so that an encrypted Neo4j connection must be
+used. 
+- As NeoDash accesses Neo4j directly, make sure you only give
 access to the right people. As a rule of thumb, you should give NeoDash
 access to the people that can also see Bloom.
 
@@ -61,12 +61,11 @@ please mailto:niels.dejong@neo4j.com[contact us].
 == 5. Can I use NeoDash with Neo4j Community Edition?
 
 Yes, NeoDash can be used with any type of Neo4j deployment (On-premise,
-cloud, or fully managed in Neo4j Aura). We do recommend that you use the
-Enterprise version for production deployments, as it lets you create a
+cloud, or fully managed in Neo4j Aura). We do however recommend that you use the
+Enterprise version, as it lets you create a
 dedicated read-only user for reporting.
 
 == 6. I’m missing a feature. Can I ask for help?
-
 Feature requests and bug reports are more than welcome. Please open an
 issue on https://github.com/nielsdejong/neodash/issues[Github]. Issues
 will be addressed on a best-effort basis.
@@ -86,5 +85,5 @@ dashboard, let us know!
 
 == 8. Can I pay for help with NeoDash?
 
-If you need help with your NeoDash deployment, please reach out to the
+If you are interested in a services agreement to support your NeoDash deployment, please reach out to the
 mailto:niels.dejong@neo4j.com[Neo4j Services Team].
