--- a/docs/Map.adoc
+++ b/docs/Map.adoc
@@ -97,5 +97,6 @@ and will need to be executed manually.
 == Rule-Based Styling
 
 Using the link:Reports#rule-based-styling[Rule-Based Styling] menu, the
-following style rules can be applied to the map: - The color of a node
-marker.
+following style rules can be applied to the map: 
+
+- The color of a node marker.
