Final adjustments to ASCIIdoc migration of the Wiki

--- a/docs/Bar-Chart.adoc
+++ b/docs/Bar-Chart.adoc
@@ -94,5 +94,6 @@ and will need to be executed manually.
 == Rule-Based Styling
 
 Using the link:Reports#rule-based-styling[Rule-Based Styling] menu, the
-following style rules can be applied to the bar chart: - The color of
-the bar.
+following style rules can be applied to the bar chart: 
+
+- The color of the bar.
