--- a/docs/User-Guide.adoc
+++ b/docs/User-Guide.adoc
@@ -9,10 +9,10 @@ NeoDash contains a Cypher editor to directly write the Cypher queries
 that populate the reports. You can save dashboards to your database, and
 share them with others.
 
-* Quickstart tells you how to get started with NeoDash right away.
-* Dashboards elaborates on how dashboards are created and used in
+* link:Quickstart[Quickstart] tells you how to get started with NeoDash right away.
+* link:Dashboards[Dashboards] elaborates on how dashboards are created and used in
 NeoDash.
-* Pages explains how to manage pages inside a dashboard.
-* Reports contains information on how a report works, and lists the
+* link:Pages[Pages] explains how to manage pages inside a dashboard.
+* link:Reports[Reports] contains information on how a report works, and lists the
 different types that can be used.
-* Publishing explains how to publish a dashboard for others to view.
+* link:Publishing[Publishing] explains how to publish a dashboard for others to view.
