--- a/docs/Sunburst.adoc
+++ b/docs/Sunburst.adoc
@@ -1,8 +1,8 @@
 A sunburst chart will render hierarchical data in a multi-level pie
-visualization. It takes two fields: - *Path*: a list of strings. This
-represents the hierarchy (from highest to lowest level). - *Value*: a
-number that matches the size of the element at the lowest level. Sizes
-of non-leaf levels are determined from the sum of their children.
+visualization. It takes two fields: 
+
+- *Path*: a list of strings. This represents the hierarchy (from highest to lowest level). 
+- *Value*: a number that matches the size of the element at the lowest level. Sizes of non-leaf levels are determined from the sum of their children.
 
 == Examples
 
