--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -1,4 +1,4 @@
-* xref:introduction.adoc[Introduction]
+* xref:index.adoc[Introduction]
 * xref:user-guide/index.adoc[User Guide]
 * xref:developer-guide/index.adoc[Developer Guide]
 ** xref:developer-guide/state-management.adoc[State Management]
