--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -1,3 +1,4 @@
+# NeoDash Documentation
 This wiki contains information on getting started with NeoDash - A Low-Code Dashboard Builder for Neo4j.
 
 
