Restructring and cleaning up docs

--- a/docs/modules/ROOT/pages/Quickstart.adoc
+++ b/docs/modules/ROOT/pages/Quickstart.adoc
@@ -1,15 +1,23 @@
-There are four ways to run NeoDash and start dashboarding your Neo4j
-data:
+= Quickstart
 
-[arabic]
+There are three easy ways to run NeoDash and start dashboarding your Neo4j data:
+
 . The latest version is always available online:
 https://neodash.graphapp.io.
 . Neo4j Desktop: Install it from the https://install.graphapp.io[Graph
 App Gallery].
 . Using Docker:
-`docker pull nielsdejong/neodash:latest      docker run -it --rm -p 5005:5005 nielsdejong/neodash`
-. Build it yourself:
-`git clone https://github.com/nielsdejong/neodash     npm install      npm run dev`
+```
+docker pull nielsdejong/neodash:latest      
+docker run -it --rm -p 5005:5005 nielsdejong/neodash
+```
+
+Or, build it yourself:
+```
+git clone https://github.com/nielsdejong/neodash     
+npm install      
+npm run dev
+```
 
 NeoDash connects to any recent version of the Neo4j database. (Neo4j 4.0
 or later). The quickest way to get started is to create a free cloud
