--- a/docs/modules/ROOT/pages/developer-guide/component-overview.adoc
+++ b/docs/modules/ROOT/pages/developer-guide/component-overview.adoc
@@ -1,3 +1,6 @@
+= Component Overview
+
+
 The image below contains a high-level overview of the component
 hierarchy within the application. The following conceptual building
 blocks are used to create the interface:
