--- a/docs/modules/ROOT/pages/developer-guide/design.adoc
+++ b/docs/modules/ROOT/pages/developer-guide/design.adoc
@@ -1,3 +1,5 @@
+= Design
+
 This page contains some key guidelines for design of the application.
 This entails code architecture, as well as UX/UI design.
 
