--- a/docs/modules/ROOT/pages/developer-guide/state-management.adoc
+++ b/docs/modules/ROOT/pages/developer-guide/state-management.adoc
@@ -1,3 +1,5 @@
+= State Management
+
 NeoDash is an application with a complex internal state. If you are
 planning to extend the application state in some way, make sure you are
 familiar with https://redux.js.org/[Redux] design patterns.
