--- a/docs/modules/ROOT/pages/user-guide/index.adoc
+++ b/docs/modules/ROOT/pages/user-guide/index.adoc
@@ -1,15 +1,9 @@
-NeoDash is an open source tool for visualizing your Neo4j data. It lets
-you group visualizations together as dashboards, and allow for
-interactions between reports. The tool supports presenting your data as
-tables, graphs, bar charts, line charts, maps and more.
+= User Guide
 
-image::./img/dashboard.png[Dashboard]
+The following pages contain everything you need to get started with NeoDash.
 
-NeoDash contains a Cypher editor to directly write the Cypher queries
-that populate the reports. You can save dashboards to your database, and
-share them with others.
 
-* link:Quickstart[Quickstart] tells you how to get started with NeoDash right away.
+* link:../Quickstart[Quickstart] tells you how to get started with NeoDash right away.
 * link:Dashboards[Dashboards] elaborates on how dashboards are created and used in
 NeoDash.
 * link:Pages[Pages] explains how to manage pages inside a dashboard.
