--- a/docs/modules/ROOT/pages/user-guide/publishing.adoc
+++ b/docs/modules/ROOT/pages/user-guide/publishing.adoc
@@ -1,3 +1,5 @@
+= Publishing
+
 When you are done building a dashboard, you may want to *publish* that
 dashboard for others to view. The workflow for a continuous dashboarding
 cycle may look something like this:
