--- a/docs/modules/ROOT/pages/user-guide/reports/index.adoc
+++ b/docs/modules/ROOT/pages/user-guide/reports/index.adoc
@@ -1,3 +1,5 @@
+= Reports
+
 A report is the smallest building build of your dashboard. Each report
 will have a single Cypher query behind it that is used to populate the
 report. Reports can be of several types (graph, table, bar chart, etc.),
